@@ -34,6 +34,7 @@
   * improving CK kernel version check
   * can now check minimal CK kernel version for any module (key "min_kernel_dep" in module cfg)
   * fixing bug when loading new module (replacing old cfg)
+  * adding ck.type_long (set to long in Python 2.x and to int in Python 3.x) for compatibility
 
 * V1.6.12
   * adding CK_PYTHON env variable in ck script 
